<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.teapink.damselindistress.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ToggleButton
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/circle_bg_on"
        android:padding="16dp"
        android:text="@string/panic_release"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/panicBtn"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textOff="@string/panic_btn_text_off"
        android:textOn="@string/panic_btn_text_on" />

</RelativeLayout>
