<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_phone_verification"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teapink.damselindistress.activities.OTPVerificationActivity">

    <ProgressBar
        android:id="@+id/loginProgress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:id="@+id/verificationFormView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/request_otp_verification"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="@dimen/text_view_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/verCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_view_padding"
                android:gravity="center"
                android:hint="@string/verification_code"
                android:inputType="phone"
                android:textStyle="bold"
                android:textSize="@dimen/verification_code_text_size"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/verifyBtn"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/verification_button_padding"
            android:layout_gravity="center"
            android:text="@string/verify_btn_text"
            android:textStyle="bold"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/invalidPhoneView"
        android:text="@string/phone_verification_error_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="@dimen/text_view_padding"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
